--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,10 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 logging.level.org.springframework=INFO
 logging.level.org.springframework.security=INFO
+
+spring.data.elasticsearch.cluster-name=demo
+spring.data.elasticsearch.cluster-nodes=localhost:9200
