--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.jpa.show-sql=false
 
 logging.level.org.springframework=INFO
 logging.level.org.springframework.security=INFO
+
+elasticsearch.cluster-name=demo
+
+management.endpoints.web.exposure.include=* 
+management.endpoints.web.exposure.exclude=shutdown 
