--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,10 @@ spring.jpa.show-sql=false
 logging.level.org.springframework=INFO
 logging.level.org.springframework.security=INFO
 
+# Elasticsearch
 elasticsearch.cluster-name=demo
+spring.data.elasticsearch.cluster-name=demo
+spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
 
 management.endpoints.web.exposure.include=* 
 management.endpoints.web.exposure.exclude=shutdown 
